# open-knowledge-format

./: .gitignore  Cargo.toml  README.md  install.sh
crates/okf/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  WEB_SUMMARY.md
crates/okf-http/: CHANGELOG.md  Cargo.toml  README.md
crates/okf-http/browser/: README.md  app.js
crates/okf-http/src/: api.rs  auth.rs  cli.rs  lib.rs  main.rs  monitoring.rs  relations.rs  routing.rs  security.rs  static_files.rs  storage.rs  tls.rs  users.rs  voyage.rs
crates/okf-http/src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs
crates/okf-http/tests/: browser_security.cjs  cli_contract.rs  standalone_e2e.rs
crates/okf/docs/knowledge/: getting-started.md  index.md
crates/okf/docs/knowledge/concepts/: format-and-document-model.md  knowledge-networking.md  root-onboarding-baseline.md  snapshot-bound-root-proposals.md  transactional-root-initialization.md
crates/okf/docs/knowledge/integration/: embedding.md  http-api-v1.md  standalone-migration.md  voyage-ai-analysis.md
crates/okf/docs/knowledge/plans/: local-access-authentication-and-tls-plan.md  okf-community-readiness-plan.md  okf-http-server-plan.md  okf-public-site-mode-and-wimux-migration-plan.md  okf-vm-test-integration-plan.md  platform-ci-and-release-artifacts-plan.md  post-extraction-release-follow-up-plan.md  secure-document-root-onboarding-plan.md  versioning-roadmap.md  voyage-ai-integration-plan.md
crates/okf/docs/knowledge/references/: ci-to-vm-handoff.md  platform-support.md  release-checklist.md  upstream-knowledge-catalog-index.md  vm-test-report-template.md
crates/okf/docs/knowledge/repository/: document-roots.md  queries-and-planning.md
crates/okf/docs/knowledge/website/: index.md  (+3 more)
crates/okf/src/: admission.rs  browser_config.rs  compliance.rs  config.rs  discovery.rs  document.rs  error.rs  frontmatter.rs  identity.rs  lib.rs  planning.rs  proposal.rs  query.rs  repository.rs  transaction.rs  uri.rs  voyage.rs
crates/okf/tests/: admission_contract.rs  browser_config_contract.rs  compliance_contract.rs  config_contract.rs  identity_contract.rs  proposal_contract.rs  repository_contract.rs  transaction_contract.rs  voyage_contract.rs
(+22 files in other folders)
